--- a/micropython/pico/conductor/html/completedsettings.html
+++ b/micropython/pico/conductor/html/completedsettings.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <p>Your settings have been saved.</p>
-        <p><b>Be sure to have the ON/OFF switch in the ON position</b> so the kinetic display uses your Wifi credentials.</p>
+        <p><b>Be sure to have the ON/OFF switch in the ON position</b><br>so the kinetic display uses your Wifi credentials.</p>
         <button id="shutdown-button">Shut down</button>
 
         <script>
