--- a/micropython/pico/conductor/html/admin.html
+++ b/micropython/pico/conductor/html/admin.html
@@ -45,53 +45,15 @@
                 </tr>
                 <tr>
                     <td>Time Zone</td>
-                    <td><select name="timeZone" id="timeZone">
-                        <option value="">Auto-detect from IP address</option>
-                        <option value="Pacific/Midway">Pacific/Midway (UTC-11:00)</option>
-                        <option value="Pacific/Honolulu">Pacific/Honolulu (UTC-10:00)</option>
-                        <option value="America/Anchorage">America/Anchorage (UTC-09:00)</option>
-                        <option value="America/Los_Angeles">America/Los_Angeles (UTC-08:00)</option>
-                        <option value="America/Denver">America/Denver (UTC-07:00)</option>
-                        <option value="America/Chicago">America/Chicago (UTC-06:00)</option>
-                        <option value="America/New_York">America/New_York (UTC-05:00)</option>
-                        <option value="America/Halifax">America/Halifax (UTC-04:00)</option>
-                        <option value="America/St_Johns">America/St_Johns (UTC-03:30)</option>
-                        <option value="America/Sao_Paulo">America/Sao_Paulo (UTC-03:00)</option>
-                        <option value="Atlantic/South_Georgia">Atlantic/South_Georgia (UTC-02:00)</option>
-                        <option value="Atlantic/Azores">Atlantic/Azores (UTC-01:00)</option>
-                        <option value="Europe/London">Europe/London (UTC+00:00)</option>
-                        <option value="Europe/Berlin">Europe/Berlin (UTC+01:00)</option>
-                        <option value="Europe/Helsinki">Europe/Helsinki (UTC+02:00)</option>
-                        <option value="Europe/Moscow">Europe/Moscow (UTC+03:00)</option>
-                        <option value="Asia/Tehran">Asia/Tehran (UTC+03:30)</option>
-                        <option value="Asia/Dubai">Asia/Dubai (UTC+04:00)</option>
-                        <option value="Asia/Kabul">Asia/Kabul (UTC+04:30)</option>
-                        <option value="Asia/Karachi">Asia/Karachi (UTC+05:00)</option>
-                        <option value="Asia/Kolkata">Asia/Kolkata (UTC+05:30)</option>
-                        <option value="Asia/Kathmandu">Asia/Kathmandu (UTC+05:45)</option>
-                        <option value="Asia/Dhaka">Asia/Dhaka (UTC+06:00)</option>
-                        <option value="Asia/Yangon">Asia/Yangon (UTC+06:30)</option>
-                        <option value="Asia/Bangkok">Asia/Bangkok (UTC+07:00)</option>
-                        <option value="Asia/Shanghai">Asia/Shanghai (UTC+08:00)</option>
-                        <option value="Australia/Eucla">Australia/Eucla (UTC+08:45)</option>
-                        <option value="Asia/Tokyo">Asia/Tokyo (UTC+09:00)</option>
-                        <option value="Australia/Adelaide">Australia/Adelaide (UTC+09:30)</option>
-                        <option value="Australia/Sydney">Australia/Sydney (UTC+10:00)</option>
-                        <option value="Australia/Lord_Howe">Australia/Lord_Howe (UTC+10:30)</option>
-                        <option value="Pacific/Noumea">Pacific/Noumea (UTC+11:00)</option>
-                        <option value="Pacific/Auckland">Pacific/Auckland (UTC+12:00)</option>
-                        <option value="Pacific/Chatham">Pacific/Chatham (UTC+12:45)</option>
-                        <option value="Pacific/Apia">Pacific/Apia (UTC+13:00)</option>
-                        <option value="Pacific/Kiritimati">Pacific/Kiritimati (UTC+14:00)</option>
-                    </select></td>
+                    <td><input type="text" id="timeZone" name="timeZone" placeholder="Europe/London" maxlength="30" size="24"></td>
                 </tr>
                 <tr>
                     <td>Display Motor Wait Time</td>
-                    <td><input type="number" id="wait" min="15" max="30"> milliseconds</td>
+                    <td><input type="number" id="wait" name="wait" min="15" max="30"> milliseconds</td>
                 </tr>
                 <tr>
                     <td>Display Motor Speed</td>
-                    <td><input type="number" id="speed" min="50" max="99"> percent</td>
+                    <td><input type="number" id="speed" name="speed" min="50" max="99"> percent</td>
                 </tr>
             </table>
             <p></p><input type="submit" value="Save" onclick="upload(event)">
@@ -117,8 +79,10 @@
                         'Content-Type': 'application/json',
                     },
                 }).then(res => {
-                console.log('Upload accepted');
-                window.location.href = '/bye';
+                    console.log('Upload accepted');
+                    window.location.href = '/bye';
+                }).catch(err => {
+                    console.error('Error saving settings:', err);
                 });
             }
 
