Initial user guide checkin

--- a/micropython/pico/conductor/html/admin.html
+++ b/micropython/pico/conductor/html/admin.html
@@ -46,7 +46,7 @@
                 <tr>
                     <td>Time Zone</td>
                     <td><select name="timeZone" id="timeZone">
-                        <option value="auto">Auto by IP address</option>
+                        <option value="auto">By IP address</option>
                         <option value="Africa/Cairo">Africa/Cairo</option>
                         <option value="Africa/Johannesburg">Africa/Johannesburg</option>
                         <option value="Africa/Lagos">Africa/Lagos</option>
@@ -105,7 +105,7 @@
                 <tr>
                     <td>Digit Style</td>
                     <td><select name="digitType" id="digitType">
-                            <option value="Earth">Earth</option>
+                            <option value="Human">Human</option>
                             <option value="Alien">Alien</option>
                         </select>
                     </td>
